--- a/themes/mi-casa/static/css/style.css
+++ b/themes/mi-casa/static/css/style.css
@@ -173,7 +173,7 @@ nav a {
 section {
   margin-right: 8px;
   margin-left: 8px;
-  min-height: calc(100% - 95.88px); /* this is an awful hack to push footer down */
+  flex: 1;
 }
 
 .gallery {
@@ -371,6 +371,8 @@ section {
   width: 100%;
   overflow: auto;
   font-family: "JetBrains Mono", monospace;
+  display: flex;
+  flex-direction: column;
 }
 
 .highlight-container,
